working docker-compose with volume
- on other hand, whenever I change index.html, it is updated in the corresponsind container on the `up` command.

--- a/docker/web/server-files/cdn/index.html
+++ b/docker/web/server-files/cdn/index.html
@@ -11,7 +11,7 @@
     <title>home - nginx docker volumes update demo</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="./assets/css/basic.css">
 </head>
 
 <body>
@@ -21,7 +21,7 @@
 
     <h1>nginx volumes demo</h1>
 
-    <p><strong>version:</strong> 7<p>
+    <p><strong>version:</strong> 11<p>
 
     <script src="" async defer></script>
 </body>
